Realtime output files added

--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,11 @@ main {
 
 main > textarea {
     width: 90%;
-    height: 90%;
+    height: 80%;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    resize: none;
 }
 
 html {
