--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,7 @@
             <button id="full" type="button">Full ambiguities analysis</button>
             <button id="hdead" type="button">Liveness analysis</button>
             <button id="delete" type="button">Delete model and close</button>
+            <button id="stop" type="button">Stop processing</button>
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
