Added Solve ambiguities button

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -14,6 +14,7 @@
             <button id="hdead" type="button">Liveness analysis</button>
             <button id="delete" type="button">Delete model and close</button>
             <button id="stop" type="button">Stop processing</button>
+            <button id="disambiguate" type="button">Solve ambiguities</button>
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
