--- a/src/static/style.css
+++ b/src/static/style.css
@@ -34,3 +34,7 @@ body {
     flex-direction: row;
     min-height: 100%;
 }
+
+hr { 
+display: block; margin-before: 0.5em; margin-after: 0.5em; margin-start: auto; margin-end: auto; overflow: hidden; border-style: inset; border-width: 1px;
+}
