Added buttons form different types of disambiguation

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -14,7 +14,9 @@
             <button id="hdead" type="button">Liveness analysis</button>
             <button id="delete" type="button">Delete model and close</button>
             <button id="stop" type="button">Stop processing</button>
-            <button id="disambiguate" type="button">Solve ambiguities</button>
+            <button id="disambiguate" type="button">Remove ambiguities</button>
+            <button id="fopt" type="button">Remove false optional</button>
+            <button id="hdd" type="button">Remove dead transition and hidden deadlock</button>
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
