--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,16 +7,17 @@
     </head>
     <body>
         <aside>
-            <label for="fts">Select FTS Model</label>
-            <input type="file" name="fts" id="fts">
-            <button id="load" type="button">Load model</button>
-            <button id="full" type="button">Full ambiguities analysis</button>
-            <button id="hdead" type="button">Liveness analysis</button>
-            <button id="delete" type="button">Delete model and close</button>
-            <button id="stop" type="button">Stop processing</button>
-            <button id="disambiguate" type="button">Remove ambiguities</button>
-            <button id="fopt" type="button">Remove false optional</button>
-            <button id="hdd" type="button">Remove dead transition and hidden deadlock</button>
+            <label class="command" for="fts">Upload FTS Model
+                <input type="file" name="fts" id="fts">
+            </label>
+            <button class="command" id="load" type="button">Load model</button>
+            <button class="command" id="full" type="button">Full ambiguities analysis</button>
+            <button class="command" id="hdead" type="button">Liveness analysis</button>
+            <button class="command" id="delete" type="button">Delete model and close</button>
+            <button class="command" id="stop" type="button">Stop processing</button>
+            <button class="command" id="disambiguate" type="button">Remove ambiguities</button>
+            <button class="command" id="fopt" type="button">Remove false optional</button>
+            <button class="command" id="hdd" type="button">Remove dead transition and hidden deadlock</button>
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
