--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -15,7 +15,7 @@
             <button class="command" id="hdead" type="button">Liveness analysis</button>
             <button class="command" id="delete" type="button">Delete model and close</button>
             <button class="command" id="stop" type="button">Stop processing</button>
-            <button class="command" id="disambiguate" type="button">Remove ambiguities</button>
+            <button class="command" id="disambiguate" type="button">Remove all ambiguities</button>
             <button class="command" id="fopt" type="button">Remove false optional</button>
             <button class="command" id="hdd" type="button">Remove dead transition and hidden deadlock</button>
         </aside>
