--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <aside>
-            <label class="command" for="fts">Upload FTS Model
+            <label class="command" for="fts">Select FTS Model
                 <input type="file" name="fts" id="fts">
             </label>
-            <button class="command" id="load" type="button">Load model</button>
+            <button class="command" id="load" type="button">Upload model</button>
             <button class="command" id="full" type="button">Full ambiguities analysis</button>
             <button class="command" id="hdead" type="button">Liveness analysis</button>
             <button class="command" id="delete" type="button">Delete model and close</button>
