Added id for file input label

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <aside>
-            <label class="command" for="fts">Select FTS Model
+            <label class="command" for="fts" id="fts-label">Select FTS Model
                 <input type="file" name="fts" id="fts">
             </label>
             <button class="command" id="load" type="button">Upload model</button>
