--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -29,6 +29,7 @@
                 <p id="message"></p>
             </div>
             <textarea id="terminal" readonly></textarea>
+            <img id="image" />
         </main>
     </body>
 </html>
