Added GUI integration for the verification of properties against the MTSv

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -18,6 +18,8 @@
             <button class="command" id="disambiguate" type="button">Remove all ambiguities</button>
             <button class="command" id="fopt" type="button">Remove false optional</button>
             <button class="command" id="hdd" type="button">Remove dead transition and hidden deadlock</button>
+            <button class="command" id="verify_properties" type="button">Verify property</button>
+            <textarea id="property_text_area" name="property_text_area" rows="20" cols="50" style="display:none">Insert an ACTL formula to verify</textarea> 
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
