--- a/src/static/style.css
+++ b/src/static/style.css
@@ -52,11 +52,11 @@ body {
   font-size: 14px;
   cursor: pointer;
   box-shadow:black 3px 3px;
-  display: none;
 }
 
-#fts-label {
-  display: block;
+#stop:disabled, .command:disabled {
+  background-color: aliceblue;
+  color: grey;
 }
 
 #stop {
@@ -64,7 +64,7 @@ body {
   color: black;
 }
 
-.command:hover {
+#stop:hover, .command:hover {
   background-color:yellow;
   color: black;
 }
