Implemented vmc_controller using pexpect(added to requirements.txt). Implemented a button which allows the user to request a counterexample

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -20,6 +20,7 @@
             <button class="command" id="hdd" type="button">Remove dead transition and hidden deadlock</button>
             <button class="command" id="verify_properties" type="button">Verify property</button>
             <textarea id="property_text_area" name="property_text_area" rows="20" cols="50" style="display:none">Insert an ACTL formula to verify</textarea> 
+            <button class="command" id="get_counterexample", type="button">View counterexample</button>
         </aside>
         <main>
             <h2>Prototype of UI for FTS4MVC tool</h2>
