Changed resource's paths

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -3,9 +3,9 @@
     <head>
         <title>FTS4VMC</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="static/script.js"></script>
-        <link rel="stylesheet" href="static/style.css">
-        <link rel="stylesheet" href="static/tab.css">
+        <script src="static/js/script.js"></script>
+        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="static/css/tab.css">
     </head>
     <body>
         <aside>
@@ -50,7 +50,9 @@
                 <p id="message"></p>
             </div>
             <textarea id="terminal" readonly></textarea>
-            <img id="image" />
+            <div class="wrapper">
+              <img id="image" />
+            </div>
         </main>
     </body>
 </html>
