--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -52,6 +52,7 @@
             <textarea id="terminal" readonly></textarea>
             <div class="wrapper">
               <img id="image" />
+              <input type="hidden" id="image-src">
             </div>
         </main>
     </body>
