Added rules for summary div

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -79,4 +79,14 @@ label {
 
 img {
   max-width:90%;
+  overflow: auto;
+  display: none;
+}
+
+#summary {
+  display: none;
+}
+
+#message, .tab > button {
+  font-size:14pt;
 }
