--- a/src/static/css/tab.css
+++ b/src/static/css/tab.css
@@ -3,7 +3,7 @@
 }
 
 /* Style the buttons that are used to open the tab content */
-.tab button {
+#message, .tab button {
   background-color: inherit;
   float: left;
   border: none;
