Added elements for summary

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -47,12 +47,15 @@
             <div class="tab">
                 <button type="button" id="terminal_tab">Terminal</button>
                 <button type="button" id="graph_tab">Graph</button>
-                <p id="message"></p>
+                <button type="button" id="summary_tab">Summary</button>
+                <button type="button" id="message"></button>
             </div>
             <textarea id="terminal" readonly></textarea>
-            <div class="wrapper">
+            <div id="image-div">
               <img id="image" />
               <input type="hidden" id="image-src">
+            </div>
+            <div id="summary">
             </div>
         </main>
     </body>
