--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -53,12 +53,12 @@
         <main>
             <h2>FTS4VMC</h2>
             <div class="tab">
-                <button type="button" id="terminal_tab">Terminal</button>
+                <button type="button" id="console_tab">Console</button>
                 <button type="button" id="graph_tab">Graph</button>
                 <button type="button" id="summary_tab">Summary</button>
                 <button type="button" id="message"></button>
             </div>
-            <textarea id="terminal" readonly></textarea>
+            <textarea id="console" readonly></textarea>
             <div id="image-div">
               <img id="image" />
               <input type="hidden" id="image-src">
