--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -54,6 +54,7 @@
             <h2>FTS4VMC</h2>
             <div class="tab">
                 <button type="button" id="console_tab">Console</button>
+                <button type="button" id="source_tab">Source</button>
                 <button type="button" id="graph_tab">Graph</button>
                 <button type="button" id="summary_tab">Summary</button>
                 <button type="button" id="message"></button>
@@ -61,10 +62,10 @@
             <textarea id="console" readonly></textarea>
             <div id="image-div">
               <img id="image" />
-              <input type="hidden" id="image-src">
             </div>
             <div id="summary">
             </div>
+            <textarea id="source" readonly></textarea>
         </main>
     </body>
 </html>
