--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -59,13 +59,18 @@
                 <button type="button" id="summary_tab">Summary</button>
                 <button type="button" id="message"></button>
             </div>
-            <textarea id="console" readonly></textarea>
+            <div class="console">
+              <textarea id="console" class="console" readonly></textarea>
+            </div>
             <div id="image-div">
               <img id="image" />
             </div>
             <div id="summary">
             </div>
-            <textarea id="source" readonly></textarea>
+            <div class="source">
+              <textarea id="source" class="source" readonly></textarea>
+              <input type="hidden" id="tmp-source">
+            </div>
         </main>
     </body>
 </html>
