Added mts button

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -21,6 +21,9 @@
             </button>
             <!-- Analisys handling -->
             <hr>
+            <button class="command" id="mts" type="button" disabled>
+              View modal transition system
+            </button>
             <button class="command" id="full" type="button" disabled>
               Full ambiguities analysis
             </button>
