Added paragraph used for error messages about graphs

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -66,13 +66,14 @@
               <textarea id="console" class="console" readonly></textarea>
             </div>
             <div id="image-div">
+              <p></p>
               <img id="image" />
             </div>
             <div id="summary">
             </div>
             <div class="source">
               <textarea id="source" class="source" readonly></textarea>
-              <input type="hidden" id="tmp-source">
+              <input type="hidden" id="tmp-source" name="MTS">
             </div>
         </main>
     </body>
