Verify properties is now enabled after at least one analysis

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -44,7 +44,7 @@
             <button class="command" id="hdd" type="button" disabled>
               Remove dead transition and hidden deadlock
             </button>
-            <button class="command" id="verify_properties" type="button">Verify property</button>
+            <button class="command" id="verify_properties" type="button" disabled>Verify property</button>
             <textarea id="property_text_area" name="property_text_area" rows="20" cols="50">Insert an ACTL formula to verify</textarea>
             <table id="legend">
               <caption>Legend</caption>
