--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -45,7 +45,7 @@
               Remove dead transition and hidden deadlock
             </button>
             <button class="command" id="verify_properties" type="button" disabled>Verify property</button>
-            <textarea id="property_text_area" name="property_text_area" rows="20" cols="50">Insert an ACTL formula to verify</textarea>
+            <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50">Insert an ACTL formula to verify</textarea>
             <button class="command" id="show_explanation" type="button" disabled>Show explanation</button>
             <table id="legend">
               <caption>Legend</caption>
