Changed button label

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -20,7 +20,7 @@
               Delete model and close
             </button>
             <button class="command" id="download" type="button" disabled>
-              Download result
+              Download displayed result
             </button>
             <!-- Analisys handling -->
             <hr>
