Removed wrong attribute

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -76,7 +76,7 @@
             </div>
             <div id="summary" name="summary">
             </div>
-            <div class="source" "source">
+            <div class="source">
               <textarea id="source" class="source" readonly></textarea>
               <input type="hidden" id="tmp-source" name="MTS">
             </div>
