Added Warning header

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -84,6 +84,7 @@
         </main>
         <div id="modal" class="modal">
           <div class="modal-content">
+            <h3>Warning</h3>
             <p>Starting a liveness analysis will delete ambiguities data found</p>
             <button type="button" class="command" id="mconfirm">Confirm</button>
             <button type="button" class="command" id="mcancel">Cancel</button>
