Added apply button and functions

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -48,6 +48,9 @@
             <button class="command operation" id="hdd" type="button" disabled>
               Remove dead transition and hidden deadlock
             </button>
+            <button class="command operation" id="apply" type="button" disabled>
+              Apply transformation
+            </button>
             <button class="command operation" id="verify_properties" type="button" disabled>Verify property</button>
             <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50">Insert an ACTL formula to verify</textarea>
             <button class="command operation" id="show_explanation" type="button" disabled>Show explanation</button>
@@ -60,6 +63,7 @@
         </aside>
         <main>
             <h2>FTS4VMC</h2>
+            <h3>FTS</h3>
             <div class="tab">
                 <button type="button" id="console_tab">Console</button>
                 <button type="button" id="source_tab">Source</button>
