Updated VmcController class(returned strings). Counterexample graph still does not disappear

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -69,7 +69,7 @@
                 <button type="button" id="source_tab">Source</button>
                 <button type="button" id="graph_tab">Graph</button>
                 <button type="button" id="summary_tab">Summary</button>
-                <button type="button" id="counter_graph_tab" disabled>View counterexample graph</button>
+                <button type="button" id="counter_graph_tab" disabled>Counterexample graph</button>
                 <button type="button" id="message"></button>
                 <a id="downloader"href="" download="" style="display: none">Download</a>
             </div>
