HTML output for VMC is now available

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -113,3 +113,16 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+main #evaluation_display{
+  text-align: center;
+}
+
+main #evaluation_display #vmc_formula {
+  background-color: lightgreen;
+  font-style: italic;
+}
+
+main #evaluation_display #vmc_eval {
+  font-weight: bold;
+}
