--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -90,6 +90,10 @@
               <p class="hideme"></p>
               <img class="hideme" id="counter_image" />
             </div>
+            <div id="evaluation_display">
+              <h2>Formulas evaluation results</h2>
+              The formula: <output id="vmc_formula" class="vmc_formula"readonly></output><br>is <output id="vmc_eval" class="vmc_eval" readonly></output><br><output id="vmc_details" class="vmc_details" readonly></output></p>
+            </div>
         </main>
         <div id="modal" class="modal">
           <div class="modal-content">
