--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -126,3 +126,12 @@ main #evaluation_display #vmc_formula {
 main #evaluation_display #vmc_eval {
   font-weight: bold;
 }
+
+main #evaluation_display #vmc_details {
+  border-style: solid;
+  border-color: lightgreen;
+}
+
+aside #property_text_area {
+  resize: none
+}
