--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -16,6 +16,7 @@ aside > * {
     flex-grow: 9;
     padding: 5px;
     background-color: seashell;
+    overflow: auto;
 }
 
 div.console, div.source{
