--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -4,6 +4,7 @@
         <title>FTS4VMC</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+        <script src="{{ url_for('static', filename='js/file.js')}}"></script>
         <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='css/modal.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='css/tab.css')}}">
