Moved property textarea tip inside placeholder attribute

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -54,13 +54,13 @@
               View modal transition system
             </button>
             <button class="command operation" id="verify_properties" type="button" disabled>Verify property</button>
-            <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50">Insert an ACTL formula to verify</textarea>
+            <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50" placeholder="Insert an v-ACTL formula to verify"></textarea>
             <button class="command operation" id="show_explanation" type="button" disabled>Show explanation</button>
             <table class="hideme" id="legend">
               <caption>Legend</caption>
               <tr><td id="dead">dead transition</td></tr>
               <tr><td id="false">false optional transition</td></tr>
-              <tr><td id="hidden">hidden deadlock</td></tr>
+              <tr><td id="hidden">hidden deadlock state</td></tr>
             </table>
         </aside>
         <main>
